--- a/MAUICalculator/MAUICalculator.csproj
+++ b/MAUICalculator/MAUICalculator.csproj
@@ -50,13 +50,17 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Remove="MVVM\" />
+	  <None Remove="MVVM\ViewModels\" />
+	  <None Remove="PropertyChanged.Fody" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="MVVM\" />
+	  <Folder Include="MVVM\ViewModels\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="MVVM\CalcView.xaml">
