--- a/MAUICalculator/MAUICalculator.csproj
+++ b/MAUICalculator/MAUICalculator.csproj
@@ -51,12 +51,14 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+		<PackageReference Include="Dangl.Calculator" Version="2.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Remove="MVVM\" />
 	  <None Remove="MVVM\ViewModels\" />
 	  <None Remove="PropertyChanged.Fody" />
+	  <None Remove="Dangl.Calculator" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="MVVM\" />
